argocd/web/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws01
spec:
  selector:
    app: wd01
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer
